# docs/swagger-output.json
@@ -60,6 +60,10 @@
       "description": "Enter JWT token as: **Bearer &lt;your_token&gt;**"
     }
   },
+  "consumes": [
+    "application/json",
+    "multipart/form-data"
+  ],
   "paths": {
     "/api/health": {
       "get": {
@@ -120,6 +124,15 @@
             "schema": {
               "type": "object",
               "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "segment": {
+                  "example": "any"
+                },
+                "address": {
+                  "example": "any"
+                },
                 "email": {
                   "example": "any"
                 },
@@ -571,7 +584,7 @@
                 "otp": {
                   "example": "any"
                 },
-                "shopName": {
+                "businessName": {
                   "example": "any"
                 },
                 "businessEmail": {
@@ -641,7 +654,7 @@
             "type": "string"
           },
           {
-            "name": "order",
+            "name": "orderSequence",
             "in": "query",
             "type": "string"
           }
@@ -753,7 +766,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "rest": {
+                "businessName": {
+                  "example": "any"
+                },
+                "businessEmail": {
+                  "example": "any"
+                },
+                "businessPhone": {
+                  "example": "any"
+                },
+                "businessDescription": {
+                  "example": "any"
+                },
+                "type": {
+                  "example": "any"
+                },
+                "gstNumber": {
+                  "example": "any"
+                },
+                "bankDetails": {
                   "example": "any"
                 }
               }
@@ -795,6 +826,38 @@
             "required": true,
             "type": "string"
           },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "Vendor"
+        ]
+      }
+    },
+    "/api/vendor/clear": {
+      "delete": {
+        "description": "",
+        "parameters": [
           {
             "name": "authorization",
             "in": "header",
@@ -878,7 +941,7 @@
             "type": "string"
           },
           {
-            "name": "order",
+            "name": "orderSequence",
             "in": "query",
             "type": "string"
           }
@@ -1417,11 +1480,6 @@
             "type": "string"
           },
           {
-            "name": "offset",
-            "in": "query",
-            "type": "string"
-          },
-          {
             "name": "status",
             "in": "query",
             "type": "string"
@@ -1432,7 +1490,7 @@
             "type": "string"
           },
           {
-            "name": "order",
+            "name": "orderSequence",
             "in": "query",
             "type": "string"
           }
@@ -1742,17 +1800,12 @@
             "type": "string"
           },
           {
-            "name": "offset",
-            "in": "query",
-            "type": "string"
-          },
-          {
             "name": "sortBy",
             "in": "query",
             "type": "string"
           },
           {
-            "name": "order",
+            "name": "orderSequence",
             "in": "query",
             "type": "string"
           }
@@ -2263,17 +2316,12 @@
             "type": "string"
           },
           {
-            "name": "parent",
-            "in": "query",
-            "type": "string"
-          },
-          {
             "name": "sortBy",
             "in": "query",
             "type": "string"
           },
           {
-            "name": "order",
+            "name": "orderSequence",
             "in": "query",
             "type": "string"
           }
@@ -2317,9 +2365,6 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "400": {
             "description": "Bad Request"
           },
@@ -2533,12 +2578,17 @@
             "type": "string"
           },
           {
+            "name": "offset",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "sortBy",
             "in": "query",
             "type": "string"
           },
           {
-            "name": "order",
+            "name": "orderSequence",
             "in": "query",
             "type": "string"
           }
@@ -2560,6 +2610,29 @@
         "tags": [
           "Customer"
         ]
+      }
+    },
+    "/api/staff/profile": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     }
   },
